changed the custom red and custom blue buttons for better aesthetics

--- a/www-root/includes/content-types-main/page-content.html
+++ b/www-root/includes/content-types-main/page-content.html
@@ -737,42 +737,58 @@
 <!--  </a></div>-->
 
 <!-- Red Buttons -->
-<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-red-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
-    Internships
-  </a></div>
-<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-red-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
-    Chat With Us
-  </a></div>
+<a href="#" class="col-xs-12 col-lg-3">
+  <button class="btn btn-lg custom-red-btn">Internships</button>
+</a>
+
+<a href="#" class="col-xs-12 col-lg-3">
+  <button class="btn btn-lg custom-red-btn">Chat With Us</button>
+</a>
+
+<a href="#" class="col-xs-12 col-lg-3" id="61876">
+  <button class="btn btn-lg custom-red-btn">Click me! This should be nice</button>
+</a>
 
 <!-- Blue Buttons -->
-<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-blue-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
+<!-- <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 " id='161876'>
+  <a role="button" class="btn btn-lg custom-blue-btn" href="/tst/experts-refresh/allexperts/" target="_blank">
     Internships
   </a></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-blue-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
+  <a role="button" class="btn btn-lg custom-blue-btn" href="/tst/experts-refresh/allexperts/" target="_blank">
     Chat With Us
-  </a></div>
+  </a></div> -->
+
+<a href="#" class="col-xs-12 col-lg-3">
+  <button class="btn btn-lg custom-blue-btn">Internships</button>
+</a>
+
+<a href="#" class="col-xs-12 col-lg-3">
+  <button class="btn btn-lg custom-blue-btn">Chat with us</button>
+</a>
+
+<a href="#" class="col-xs-12 col-lg-3">
+  <button class="btn btn-lg custom-blue-btn">This multiline should also look nice</button>
+</a>
+
 
 <!-- Gray Buttons -->
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-grey-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
+  <a role="button" class="btn btn-lg custom-grey-btn" href="/tst/experts-refresh/allexperts/" target="_blank">
     Internships
   </a></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-grey-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
+  <a role="button" class="btn btn-lg custom-grey-btn" href="/tst/experts-refresh/allexperts/" target="_blank">
     Chat With Us
   </a></div>
 
 <!-- Black Buttons -->
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-black-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
+  <a role="button" class="btn btn-lg custom-black-btn" href="/tst/experts-refresh/allexperts/" target="_blank">
     Internships
   </a></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>
-  <a role="button" class="btn btn-lg custom-black-btn" href="/tst/experts-refresh/allexperts/" target="_blank" >
+  <a role="button" class="btn btn-lg custom-black-btn" href="/tst/experts-refresh/allexperts/" target="_blank">
     Chat With Us
   </a></div>
 
@@ -780,6 +796,7 @@
   .HighlightBox-content {
     display: inline-block;
   }
+
 </style>
 
 <!-- HiglightBox text/shtml -->
@@ -801,8 +818,8 @@
 </div>
 
 <style>
-  .expert-photo{
-    float:right;
+  .expert-photo {
+    float: right;
   }
 
   .expert-photo>img {
@@ -824,15 +841,18 @@
         </h3>
         <p><strong>Department:</strong> History</p>
         <p><strong>Title:</strong> Associate Professor</p>
-        <p><strong>Expertise:</strong> History of medieval Europe (social and cultural), History of women and gender, History of intellectual life and philosophy, Anglo-Saxon and Anglo-Norman worlds, History of authority and social minorities</p>
+        <p><strong>Expertise:</strong> History of medieval Europe (social and cultural), History of women and gender,
+          History of intellectual life and philosophy, Anglo-Saxon and Anglo-Norman worlds, History of authority and
+          social minorities</p>
       </div>
       <div class="col-xs-5 col-md-3">
-        <section class='expert-photo'> <img class="" src="https://adt4apps.msudenver.edu/media/marketingandcommunications/expertsguide/new2017photostandards350x540photos/Klimek.Kim350x540.jpg" alt="Klimek, Kim" style="  " /> </section>
+        <section class='expert-photo'> <img class=""
+            src="https://adt4apps.msudenver.edu/media/marketingandcommunications/expertsguide/new2017photostandards350x540photos/Klimek.Kim350x540.jpg"
+            alt="Klimek, Kim" style="  " /> </section>
       </div>
     </div>
-  </div></div>
-
-
+  </div>
+</div>
 
 <div class="row">
   <div class="col-xs-12">
