--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -1,19 +1,20 @@
 .btn {
-    transition: opacity 250ms ease-in-out;
-    text-align: left;
-    white-space: normal;
-    border: 0px solid transparent;
-    border-radius: 0;
+  transition: opacity 250ms ease-in-out;
+  text-align: left;
+  white-space: normal;
+  border: 0px solid transparent;
+  border-radius: 0;
 }
 
 .btn:hover {
-opacity: 1.5;
-transition: opacity 250ms ease-in-out;
+  opacity: 1.5;
+  transition: opacity 250ms ease-in-out;
 }
 
 .btn-primary a {
   color: #fff
 }
+
 .btn-primary a a:hover {
   text-decoration: none
 }
@@ -29,44 +30,90 @@ transition: opacity 250ms ease-in-out;
   font-size: 1.0rem;
 }
 
-.custom-red-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #D11242 !important;
-  border: 2px solid #D11242 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
+// Original custom-blue-btn
+// .custom-blue-btn {
+//   margin-bottom: 15px;
+//   width: 100%;
+//   background-color: #ffffff;
+//   color: #002855 !important;
+//   border: 2px solid #002855 !important;
+//   font-family: 'Gotham A', 'Gotham B', sans-serif;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 25px;
+//   text-align: center;
+//   padding: 32px 0;
+// }
+
+// Original custom-red-btn 
+// .custom-red-btn {
+//   margin-bottom: 15px;
+//   width: 100%;
+//   background-color: #ffffff;
+//   color: #D11242 !important;
+//   border: 2px solid #D11242 !important;
+//   font-family: 'Gotham A', 'Gotham B', sans-serif;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 25px;
+//   text-align: center;
+// }
+
+
+.custom-blue-btn {
+  border-color: #00447c;
+  border-width: 2px;
+  background: #fff;
+  color: #00447c !important;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  font-weight: 500;
+  // bottom: -65px;
+  position: relative;
   text-align: center;
-  padding: 32px 0;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
 }
+
+.custom-red-btn {
+  border-color: #D11242;
+  border-width: 2px;
+  background: #fff;
+  color: #D11242 !important;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  font-weight: 500;
+  // bottom: -65px;
+  position: relative;
+  text-align: center;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
 .custom-red-btn:hover {
   transition: background-color .4s ease-in-out;
   color: #ffffff !important;
   background-color: #DE2554;
   border-color: #D11242;
 }
-.custom-blue-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #002855 !important;
-  border: 2px solid #002855 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  text-align: center;
-  padding: 32px 0;
-}
+
+
+
 .custom-blue-btn:hover {
   transition: background-color .4s ease-in-out;
   color: #ffffff !important;
   background-color: #00418B;
   border-color: #002855;
 }
+
 .custom-grey-btn {
   margin-bottom: 15px;
   width: 100%;
@@ -80,12 +127,14 @@ transition: opacity 250ms ease-in-out;
   text-align: center;
   padding: 32px 0;
 }
+
 .custom-grey-btn:hover {
   transition: background-color .4s ease-in-out;
   color: #ffffff !important;
   background-color: #969696;
   border-color: #717073;
 }
+
 .custom-black-btn {
   margin-bottom: 15px;
   width: 100%;
@@ -99,6 +148,7 @@ transition: opacity 250ms ease-in-out;
   text-align: center;
   padding: 32px 0;
 }
+
 .custom-black-btn:hover {
   transition: background-color .4s ease-in-out;
   color: #ffffff !important;
@@ -107,13 +157,13 @@ transition: opacity 250ms ease-in-out;
 }
 
 .contact-info button {
-	float: left !important;
+  float: left !important;
 }
 
 @media screen and (min-width: 768px) {
-	.contact-info-mobile {
-		display: none;
-	}
+  .contact-info-mobile {
+    display: none;
+  }
 }
 
 .contact-info button {
