--- a/www-root/includes/content-types-main/page-hero.html
+++ b/www-root/includes/content-types-main/page-hero.html
@@ -1,7 +1,10 @@
 <div class="row">
-  <div class="col-xs-12 hero">
-  <img class="img-responsive" src="https://www.msudenver.edu/media/marketingandcommunications/brandcentral/images/BC-Hero-final.jpg" alt="work study help desk" style="   " />
-    <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
-  <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
+  <div class="hero">
+    <img class="img-responsive"
+      src="https://www.msudenver.edu/media/marketingandcommunications/marketing-communications-hero-image.jpg"
+      alt="work study help desk" style="   " />
+    <span class="hero-caption">
+      <h2>Hero Image Caption</h2>
+    </span>
   </div>
 </div>
