--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11162,7 +11162,7 @@ footer {
   font-size: 1.0rem;
 }
 
-.custom-blue-btn {
+.customm-blue-btn {
   border-color: #00447c;
   border-width: 2px;
   background: #fff;
@@ -11213,17 +11213,21 @@ footer {
 }
 
 .custom-grey-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
+  border-color: #ffffff;
+  border-width: 2px;
+  background: #fff;
   color: #717073 !important;
-  border: 2px solid #717073 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  font-weight: 500;
+  position: relative;
   text-align: center;
-  padding: 32px 0;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
 .custom-grey-btn:hover {
@@ -12757,7 +12761,6 @@ hr.style-one {
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
   bottom: auto !important;
-  padding: 2%;
 }
 
 .hero-caption h1,
@@ -12767,6 +12770,8 @@ hr.style-one {
 .hero-caption h5,
 .hero-caption h6 {
   color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  padding-left: 2%;
 }
 
 @media screen and (min-width: 992px) {
@@ -12791,6 +12796,18 @@ hr.style-one {
 
   .hero span> :last-child {
     padding-bottom: inherit;
+  }
+
+
+  .hero-caption h1,
+  .hero-caption h2,
+  .hero-caption h3,
+  .hero-caption h4,
+  .hero-caption h5,
+  .hero-caption h6 {
+    color: #fff;
+    background: none;
+    padding: none;
   }
 }
 
