--- a/development/terminalfour/src/sass/viewbook/background-panel.scss
+++ b/development/terminalfour/src/sass/viewbook/background-panel.scss
@@ -2,65 +2,80 @@
   background-size: cover;
   border: 10px solid white;
   padding: 20px 5%;
-  height: 20vw;
+  height: 67.535vw;
   display: table;
-  transition: transform .4s;
+  transition: transform 0.4s;
 
   .img-responsive {
-      display: inline;
+    display: inline;
   }
-  
+
   span {
     display: table-cell;
     vertical-align: middle;
-    };
+  }
 
-    h2, h3, h4, h5, p, a {
-      color: white;
-    };
+  h2,
+  h3,
+  h4,
+  h5,
+  p,
+  a {
+    color: white;
+  }
 
-    h3 {
-      font-size: 1.5rem;
-    };
-    p {
-      font-size: 1.25rem;
-    };
+  h3 {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 1.25rem;
+  }
 
-    a {
-      float: right;
-      font-size: 1.6rem;
-      margin-top: 20px;
-      font-weight: bold;
-      text-transform: uppercase;
-    };
-};
+  a {
+    float: right;
+    font-size: 1.6rem;
+    margin-top: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+}
 
+@media (max-width: 767px) {
+  .background-panel {
+    max-height: fit-content !important;
+    min-height: fit-content !important;
+  }
+}
 
 .background-panel a {
-  transition: transform .4s;
-};
+  transition: transform 0.4s;
+}
 
 .background-panel a:hover {
-    -ms-transform: scale(1.1); /* IE 9 */
-    -webkit-transform: scale(1.1); /* Safari 3-8 */
-    transform: scale(1.1);
-};
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1);
+}
 
 .background-panel-red {
   background-color: $msu-red !important;
-};
+}
 
 .background-panel-blue {
   background-color: $msu-blue !important;
-};
+}
 
 .background-panel-gray {
   background-color: #717073 !important;
-};
+}
 
 .background-panel-inverse {
-  h2, h3, h4, h5, p, a {
+  h2,
+  h3,
+  h4,
+  h5,
+  p,
+  a {
     color: $msu-blue !important;
-  };
-
-};
+  }
+}
