--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12379,7 +12379,7 @@ section.admissionsHomepageResources .resources-container .resources-link:hover {
 
 @media (max-width: 767px) {
   .background-panel {
-    max-height: fit-content !important;
+    max-height: none !important;
     min-height: fit-content !important;
     height: 67.535vw;
   }
