Fix footer social media link issues

--- a/development/terminalfour/src/html/includes/footer.html
+++ b/development/terminalfour/src/html/includes/footer.html
@@ -7,134 +7,265 @@
       <div class="footer-promos-row">
         <!-- Footer promo -->
         <div class="footer-promo">
-          <a href="#" class="footer-promo-bg"
-            style="background-image:url(style-assets/media/template-assets/be-a-champion.png)">
+          <a
+            href="#"
+            class="footer-promo-bg"
+            style="background-image:url(style-assets/media/template-assets/be-a-champion.png)"
+          >
             <h2 class="footer-promo-heading"><span>Be a champion</span></h2>
-            <p class="footer-promo-text"><span>Create a strong collective voice for MSU Denver</span>
+            <p class="footer-promo-text">
+              <span>Create a strong collective voice for MSU Denver</span>
             </p>
           </a>
         </div>
         <!-- // Footer promo -->
         <!-- Footer promo -->
         <div class="footer-promo">
-          <a href="#" class="footer-promo-bg"
-            style="background-image:url(style-assets/media/template-assets/students-on-campus.png)">
+          <a
+            href="#"
+            class="footer-promo-bg"
+            style="background-image:url(style-assets/media/template-assets/students-on-campus.png)"
+          >
             <h2 class="footer-promo-heading"><span>Make a gift</span></h2>
 
-            <p class="footer-promo-text"><span>Create new possibilities for our students</span></p>
+            <p class="footer-promo-text">
+              <span>Create new possibilities for our students</span>
+            </p>
           </a>
         </div>
         <!-- // Footer promo -->
         <!-- Footer promo -->
         <div class="footer-promo">
-          <a href="#" class="footer-promo-bg"
-            style="background-image:url(style-assets/media/template-assets/register-online.jpg)">
-            <h2 class="footer-promo-heading"><span>MSU Denver's Next President</span></h2>
+          <a
+            href="#"
+            class="footer-promo-bg"
+            style="background-image:url(style-assets/media/template-assets/register-online.jpg)"
+          >
+            <h2 class="footer-promo-heading">
+              <span>MSU Denver's Next President</span>
+            </h2>
 
-            <p class="footer-promo-text"><span>Your transformation begins at MSU denver</span></p>
-
+            <p class="footer-promo-text">
+              <span>Your transformation begins at MSU denver</span>
+            </p>
           </a>
-
         </div>
         <!-- // Footer promo -->
-
-      </div><!-- // .footer-promos-row (row) -->
+      </div>
+      <!-- // .footer-promos-row (row) -->
 
       <div class="footer-menu-row">
         <div class="footer-campus-info visible-xs">
-
-          <p><a href="javascript:void(0)">Metropolitan State University of Denver</a></p>
-          <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver,
-              Colorado</a></p>
-          <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
-          <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)"
-              href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
-
-
-        </div><!-- .campus-info  -->
+          <p>
+            <a href="javascript:void(0)"
+              >Metropolitan State University of Denver</a
+            >
+          </p>
+          <p>
+            <i role="presentation" class="fa fa-map-marker fa-lg"></i>
+            <a href="javascript:void(0)">Denver, Colorado</a>
+          </p>
+          <p>
+            <i role="presentation" class="fa fa-phone fa-lg"></i>
+            <a href="javascript:void(0)">303-556-5740</a>
+          </p>
+          <p>
+            <i role="presentation" class="fa fa-comments chat-icon fa-lg"></i>
+            <a onclick="javascript:void(0)" href="javascript:void(0)"
+              >Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a
+            >
+          </p>
+        </div>
+        <!-- .campus-info  -->
         <div class="footer-links">
           <div class="footer-links-row">
             <div class="footer-links-col ">
               <ul class="footer-nav list-unstyled">
-                <li><a href="javascript:void(0)" id="Footer-About">About</a></li>
-                <li><a href="javascript:void(0)" id="Footer-DegreePrograms">Degree Programs</a></li>
+                <li>
+                  <a href="javascript:void(0)" id="Footer-About">About</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" id="Footer-DegreePrograms"
+                    >Degree Programs</a
+                  >
+                </li>
                 <li><a href="javascript:void(0)" id="Footer-Cost">Cost</a></li>
-                <li><a href="javascript:void(0)" id="Footer-FinancialAid">Financial Aid</a></li>
-                <li><a href="javascript:void(0)" id="Footer-Bookstore" target="_blank">Bookstore</a></li>
+                <li>
+                  <a href="javascript:void(0)" id="Footer-FinancialAid"
+                    >Financial Aid</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="javascript:void(0)"
+                    id="Footer-Bookstore"
+                    target="_blank"
+                    >Bookstore</a
+                  >
+                </li>
               </ul>
             </div>
             <div class="footer-links-col">
               <ul class="footer-nav list-unstyled">
-                <li><a href="javascript:void(0)" id="Footer-Tours">Tours</a></li>
-                <li><a href="javascript:void(0)" id="Footer-Directions">Directions</a></li>
-                <li><a href="javascript:void(0)" id="Footer-Parking">Parking</a></li>
-                <li><a href="javascript:void(0)" id="Footer-Careers" target="_blank">Careers</a></li>
+                <li>
+                  <a href="javascript:void(0)" id="Footer-Tours">Tours</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" id="Footer-Directions"
+                    >Directions</a
+                  >
+                </li>
+                <li>
+                  <a href="javascript:void(0)" id="Footer-Parking">Parking</a>
+                </li>
+                <li>
+                  <a
+                    href="javascript:void(0)"
+                    id="Footer-Careers"
+                    target="_blank"
+                    >Careers</a
+                  >
+                </li>
                 <li><a href="javascript:void(0)">Safety</a></li>
               </ul>
             </div>
             <div class="social-mobile footer-links visible-xs">
               <ul class="list-unstyled footer-social">
-                <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                      class="fa fa-facebook-square fa-2x"></i></a></li>
-                <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                      class="fa fa-twitter-square fa-2x"></i></a></li>
-                <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                      class="fa fa-linkedin-square fa-2x"></i></a></li>
-                <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                      class="fa fa-instagram fa-2x"></i></a></li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank"
+                    ><i
+                      role="presentation"
+                      class="fa fa-facebook-square fa-2x"
+                    ></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank"
+                    ><i
+                      role="presentation"
+                      class="fa fa-twitter-square fa-2x"
+                    ></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank"
+                    ><i
+                      role="presentation"
+                      class="fa fa-linkedin-square fa-2x"
+                    ></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank"
+                    ><i role="presentation" class="fa fa-instagram fa-2x"></i
+                  ></a>
+                </li>
 
-                <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                      class="fa fa-youtube-square fa-2x"></i></a></li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank"
+                    ><i
+                      role="presentation"
+                      class="fa fa-youtube-square fa-2x"
+                    ></i
+                  ></a>
+                </li>
               </ul>
             </div>
-          </div><!-- // .footer-links-row -->
-
-        </div><!-- // .footer-links (col) -->
+          </div>
+          <!-- // .footer-links-row -->
+        </div>
+        <!-- // .footer-links (col) -->
 
         <div class="footer-logo">
-          <p><a href="javascript:void(0)">
-              <img src="style-assets/media/template-assets/msu-denver-logo-footer.svg" class="footer-logo-img"
-                alt="MSU logo" />
-            </a></p>
-          <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a><br><a
-              href="javascript:void(0)"><small>Privacy Statement</small></a></p>
-
-        </div><!-- .footer-logo -->
+          <p>
+            <a href="javascript:void(0)">
+              <img
+                src="style-assets/media/template-assets/msu-denver-logo-footer.svg"
+                class="footer-logo-img"
+                alt="MSU logo"
+              />
+            </a>
+          </p>
+          <p class="privacy-statement">
+            <a href="javascript:void(0)"><small>&copy; MSU Denver</small></a
+            ><br /><a href="javascript:void(0)"
+              ><small>Privacy Statement</small></a
+            >
+          </p>
+        </div>
+        <!-- .footer-logo -->
 
         <div class="footer-campus-info hidden-xs">
-
-          <p><a href="javascript:void(0)">Metropolitan State University of Denver</a></p>
-          <p><i role="presentation" class="fa fa-map-marker fa-lg"></i> <a href="javascript:void(0)">Denver,
-              Colorado</a></p>
-          <p><i role="presentation" class="fa fa-phone fa-lg"></i> <a href="javascript:void(0)">303-556-5740</a></p>
-          <p><i role="presentation" class="fa fa-comments chat-icon fa-lg"></i> <a onclick="javascript:void(0)"
-              href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+          <p>
+            <a href="javascript:void(0)"
+              >Metropolitan State University of Denver</a
+            >
+          </p>
+          <p>
+            <i role="presentation" class="fa fa-map-marker fa-lg"></i>
+            <a href="javascript:void(0)">Denver, Colorado</a>
+          </p>
+          <p>
+            <i role="presentation" class="fa fa-phone fa-lg"></i>
+            <a href="javascript:void(0)">303-556-5740</a>
+          </p>
+          <p>
+            <i role="presentation" class="fa fa-comments chat-icon fa-lg"></i>
+            <a onclick="javascript:void(0)" href="javascript:void(0)"
+              >Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a
+            >
+          </p>
           <ul class="list-unstyled footer-social">
-            <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                  class="fa fa-facebook-square fa-2x"></i></a></li>
-            <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                  class="fa fa-twitter-square fa-2x"></i></a></li>
-            <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                  class="fa fa-linkedin-square fa-2x"></i></a></li>
-            <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                  class="fa fa-instagram fa-2x"></i></a></li>
+            <li>
+              <a
+                href="javascript:void(0)"
+                target="_blank"
+                aria-label="facebook link"
+                ><i role="presentation" class="fa fa-facebook-square fa-2x"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="javascript:void(0)"
+                target="_blank"
+                aria-label="twitter link"
+                ><i role="presentation" class="fa fa-twitter-square fa-2x"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="javascript:void(0)"
+                target="_blank"
+                aria-label="linkedin link"
+                ><i role="presentation" class="fa fa-linkedin-square fa-2x"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="javascript:void(0)"
+                target="_blank"
+                aria-label="instagram link"
+                ><i role="presentation" class="fa fa-instagram fa-2x"></i
+              ></a>
+            </li>
 
-            <li><a href="javascript:void(0)" target="_blank"><i role="presentation"
-                  class="fa fa-youtube-square fa-2x"></i></a></li>
+            <li>
+              <a
+                href="javascript:void(0)"
+                target="_blank"
+                aria-label="youtube link"
+                ><i role="presentation" class="fa fa-youtube-square fa-2x"></i
+              ></a>
+            </li>
           </ul>
-
-        </div><!-- .campus-info  -->
-
-
-      </div><!-- .row -->
-
-
-    </section><!-- footer .container -->
+        </div>
+        <!-- .campus-info  -->
+      </div>
+      <!-- .row -->
+    </section>
+    <!-- footer .container -->
   </div>
 </footer>
-
-
-
 
 <script src="style-assets/js/NavbarScroll.js"></script>
 
