fixed typo on custom-btn-blue css

--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -9775,7 +9775,7 @@ footer {
   font-size: 1rem;
 }
 
-.customm-blue-btn {
+.custom-blue-btn {
   border-color: #00447c;
   border-width: 2px;
   background: #fff;
