changed targeting for scroll appearance

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -82,10 +82,11 @@ $highlightPrimaryBlue: #7591bc;
     // To remove the appearance of the menu scroll bar
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
-    ::-webkit-scrollbar { 
-      display: none;  /* Safari and Chromium */
-    }
   }
+  #menu-nav::-webkit-scrollbar { 
+    display: none;  /* Safari and Chromium */
+  }
+
 }
 
 .apply-button {
